Microservices connection